ags (0.7.46)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMainLoop::interrupt and AgsMainLoop::monitor
	* fixed configuration in place of AgsSynth and AgsFFPlayer by using AgsSynthGenerator repectively AgsAudioFileLink
	* fixed AgsTactable signals to be emitted
	* TODO fixed configuration in place to reset thread frequency

ags (0.7.45)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented resetting samplerate, buffer size and format. Thus added properties to AgsAudio and AgsChannel.
	* implemented ags_audio_file_check_suffix() and ags_ipatch_check_suffix()
	* implemented ags_input_open_file()
	* implemented soundcard property of AgsIpatch
	* implemented preset, instrument and sample property of AgsAudioFileLink
	* implemented AgsSynthGenerator and ags_synth_util.c
	* implemented copy functions in ags_audio_buffer_util.c
	* implemented AgsApplyPresets recall
	* refactored replacing template AgsAudioSignal as adding new template
	* improved mutices in ags_audio_open_files()
	* fixed ags_devout_realloc_buffer() to use pcm_channels instead of dsp_channels

ags (0.7.44)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing parsing of alsa-handle key of configuration within AGS simple file
	* fixed AgsExportThread JIFFIE and AGS_THREAD_START_SYNCED_FREQ flag
	* fine-tuned performance and thus providing some fixes

ags (0.7.43)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-count-beats recall to ommit tics
	* fixed timing issue of toplevel AgsThread limit nanosleep() to band
	* fixed missing read of config values in ags_soundcard_thread() to calculate its frequency
	* improved ref/unref AgsAudioSignal because it wasn't properly done
	* modified ags_recall_recycling.c to not cache AgsAudioSignal
	* modified default frequency to 1000 Hz and buffer size of 512

ags (0.7.42)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]